2006-12-14  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	Update the entities. Fix the version number in the ffmpeg release
	notes link

2006-12-13  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.2.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.5.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release 0.10.2 of gst-ffmpeg and 0.10.5 of gst-plugins-ugly

2006-12-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	Remove empty person from the persons list
	* src/htdocs/releases/gstreamer/0.10.11.xml:
	Re-add the API additions section that I'm sure I added once
	already.

2006-12-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	Fix the api additions tags <additions><item></item>, not
	<additions><addition></addition>

2006-12-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.11.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	GStreamer 0.10.11 and gst-plugins-base 0.10.11 releases

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.6.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	gst-python 0.10.6 "You're not very subtle, but you are effective"
	release.

2006-11-27  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/news/news.xml:
	Mention the new GNonLin release in the news

2006-11-27  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.6.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	GNonLin 0.10.6 "Where is my beard ?" release
