@@ -10,7 +10,9 @@
   <title>GStreamer: download for Fedora Core</title>
   <body>
 
-<h2>Download instructions for Fedora Core</h2>
+<h2>Download instructions for Fedora Core 5 and higher</h2>
+
+<i>Note: For FC4 and older, see <A href="http://fedora.html"></i>
 <P>
 GStreamer is distributed with Fedora Core.
 Fedora Core 5 shipped with GStreamer 0.10.
